Fix overlapping issue with the checkboxes
Checkboxes in todolist section are shown on top
of sidebar in mobile device. Add z-index to reverse
that.

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ label {
 /* Sidebar */
 .sidebar {
     position: fixed;
+    z-index: 1;
     top: 0;
     bottom: 0;
     width: 285px;
